# serenity-rs_boilerplate

./: .env  Cargo.toml  README.md
bot_commands/: Cargo.toml
bot_commands/src/: cmd_buttons.rs  cmd_dropdowns.rs  cmd_example.rs  cmd_help.rs  cmd_ping.rs  groups.rs  lib.rs
bot_config/: Cargo.toml
bot_config/src/: lib.rs
bot_core/: Cargo.toml
bot_core/src/: entrypoint.rs  intents.rs  lib.rs
bot_db/: Cargo.toml
bot_db/src/: dyn_prefix.rs  lib.rs  load_database.rs  type_map_key.rs
bot_events/: Cargo.toml
bot_events/src/: event_handler.rs  lib.rs  raw_event_handler.rs
bot_events/src/event_handlers/: cache_ready.rs  message.rs  mod.rs  ready.rs
bot_events/src/raw_event_handlers/: mod.rs  raw_event.rs
bot_utils/: Cargo.toml
bot_utils/src/: lib.rs  set_dir.rs  shard_manager_wrapper.rs
src/: main.rs
