[package]
name = "bot_commands"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot_utils = { path = "../bot_utils" }
bot_db = { path = "../bot_db" }

tracing = "0.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["client", "standard_framework", "rustls_backend", "framework", "cache", "collector", "unstable_discord_api"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "postgres", "offline"]
