[package]
name = "bot_utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"

[dependencies.tokio]
version = "1.8"
features = ["full"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["client", "standard_framework", "rustls_backend", "framework", "cache", "collector", "unstable_discord_api"]

